; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/gadget/function/extr_f_fs.c_ffs_free_inst.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/gadget/function/extr_f_fs.c_ffs_free_inst.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_function_instance = type { i32 }
%struct.f_fs_opts = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.usb_function_instance*)* @ffs_free_inst to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ffs_free_inst(%struct.usb_function_instance* %0) #0 {
  %2 = alloca %struct.usb_function_instance*, align 8
  %3 = alloca %struct.f_fs_opts*, align 8
  store %struct.usb_function_instance* %0, %struct.usb_function_instance** %2, align 8
  %4 = load %struct.usb_function_instance*, %struct.usb_function_instance** %2, align 8
  %5 = call %struct.f_fs_opts* @to_f_fs_opts(%struct.usb_function_instance* %4)
  store %struct.f_fs_opts* %5, %struct.f_fs_opts** %3, align 8
  %6 = call i32 (...) @ffs_dev_lock()
  %7 = load %struct.f_fs_opts*, %struct.f_fs_opts** %3, align 8
  %8 = getelementptr inbounds %struct.f_fs_opts, %struct.f_fs_opts* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @_ffs_free_dev(i32 %9)
  %11 = call i32 (...) @ffs_dev_unlock()
  %12 = load %struct.f_fs_opts*, %struct.f_fs_opts** %3, align 8
  %13 = call i32 @kfree(%struct.f_fs_opts* %12)
  ret void
}

declare dso_local %struct.f_fs_opts* @to_f_fs_opts(%struct.usb_function_instance*) #1

declare dso_local i32 @ffs_dev_lock(...) #1

declare dso_local i32 @_ffs_free_dev(i32) #1

declare dso_local i32 @ffs_dev_unlock(...) #1

declare dso_local i32 @kfree(%struct.f_fs_opts*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
